[gd_scene load_steps=3 format=3 uid="uid://crur6ww7sn88h"]

[ext_resource type="Script" uid="uid://re7bcmrgx22k" path="res://scripts/ui.gd" id="1_fyqef"]
[ext_resource type="Theme" uid="uid://yckp6h4r23ek" path="res://default_ui.tres" id="2_m6e0p"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 330.0
offset_bottom = 257.0
script = ExtResource("1_fyqef")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 25.0
offset_top = 25.0
offset_right = 317.0
offset_bottom = 314.0
theme = ExtResource("2_m6e0p")

[node name="MoneyLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Money: $100"
fit_content = true

[node name="SpeedLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bus speed (mph): 20"
fit_content = true

[node name="SatisfactionLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Satisfaction level: 0"
fit_content = true

[node name="BusButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Increases the speed of the bus - vroooooom."
theme = ExtResource("2_m6e0p")
text = "+2 MPH ($50)"

[node name="GameOver" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -25.0
offset_right = 250.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_m6e0p")

[node name="GameOverLabel" type="RichTextLabel" parent="GameOver"]
layout_mode = 2
bbcode_enabled = true
text = "[center]You've reached the satisfaction level goal!
Thanks for playing :)[/center]"
fit_content = true
